<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">God Tools</string>
    <string name="app_title">God Tools</string>
    <string name="menu_item_kgp">Knowing God Personally</string>
    <string name="menu_item_satisfied">Satisfied?</string>
    <string name="menu_item_cwg">Connecting With God</string>
    <string name="menu_item_4laws">The Four Spiritual Laws</string>
    <string name="menu_item_everystudent">Everystudent.com</string>
    <string name="menu_item_first_page">First page</string>

    <!--It seems that this item should be called share and not email. Email would lead one
    to think that they are emailing the maker of the app-->
    <string name="menu_item_email">Share</string>
    <string name="menu_item_contents">Contents</string>
    <string name="menu_item_languages">Languages</string>
    <string name="menu_item_last_page">Last page</string>
    <string name="menu_item_help">Help</string>
    <string name="languages_activity_title">Languages</string>
    <string name="menu_switch_language">Switch Language</string>
    <string name="menu_update_page">Update Page (draft)</string>
    <string name="menu_flip">Flip</string>

    <string name="app_description">Campus Crusade for Christ</string>
    <string name="app_name_about">About God Tools</string>
    <string name="app_name_gallery_help">Booklet Help</string>
    <string name="app_name_everystudent">EveryStudent.com</string>

    <string name="settings">God Tools Settings</string>
    <string name="title_toggle_analytics">Collect Usage Data</string>
    <string name="summary_toggle_analytics">Allow God Tools to collect anonymous usage data for statistical purposes.</string>
    <string name="title_toggle_wakelock">Keep Screen On</string>
    <string name="summary_toggle_wakelock">Keep the screen on while viewing Booklets and EveryStudent.com Articles</string>

    <string name="quit_dialog_message">Are you sure you want to exit GodTools?</string>
    <string name="quit_dialog_confirm">Exit</string>
    <string name="quit_dialog_cancel">Cancel</string>

    <string name="search_label">EveryStudent.com</string>
    <string name="search_hint">Search EveryStudent.com</string>
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>
    <string name="search_no_results">No results found for \"%s\"</string>

    <string name="settings_description">Explore questions about life and God</string>

    <string name="gallery_no_images">No Images To Display!</string>

    <string name="menu_search">Search</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <string name="about_suggestions">Please email us at %1$s with any questions or suggestions on how to make this app better.</string>
    <string name="about_copyright">Copyright Information</string>
    <string name="about_presentation">This presentation created and produced by Cru ©2014. All rights reserved.</string>
    <string name="about_kgp">"Would You Like to Know God Personally?" ©1995–2010 Cru and Bright Media Foundation (BMF). All rights reserved.</string>
    <string name="about_satisfied">"Satisfied?" ©2001–2010 Cru and Bright Media Foundation (BMF). All rights reserved.</string>

    <string name="gallery_help">The booklets in God Tools were designed to create a similar experience to that of using a real booklet. To advance to the next booklet page, simply swipe to the left. To return to the previous page, swipe to the right. To zoom, press and hold until your device vibrates; then without lifting your finger, drag up to zoom in or down to zoom out. Turning your device to landscape will automatically zoom the booklet page to fit horizontally, allowing you to more easily view the booklet.</string>
    <string name="snuffy_help">To advance to the next page, simply swipe to the left. To return to the previous page, swipe to the right. To show the menu you can tap in any area of the page other than on a button.</string>
    <string name="snuffy_help_title" formatted="false">%1 help</string>

    <string name="choose_your_email_provider">Choose your email provider</string>
    <string name="unable_to_send_the_email">Unable to send the email</string>
    <string name="email">Email</string>
    <string name="copy">Copy</string>
    <string name="all_websites">All Websites</string>
    <string name="loading_language_list">Loading languages…</string>
    <string name="loading_requested_language">Loading requested language…</string>
    <string name="download_language">Download language</string>
    <string name="remove_language">Remove language</string>
    <string name="switch_to_language">Switch to language</string>
    <string name="remove_this_language">Are you sure you want to remove this language?</string>

    <string name="app_email_body" formatted="false">Continue reading %1 by going to the following link:\n%2</string>
    <string name="app_email_subject">Our conversation about %1 today</string>
    <!-- TODO: What is the correct wording for sharing the app without a package?-->
    <string name="app_share_subject_main_screen">GodTools</string>
    <string name="app_share_body_main_screen">View GodTools online at:\n%1</string>
    <string name="app_share_link_base_link" formatted="false">http://www.knowgod.com</string>

    <!-- Renderer Activity -->
    <string name="processing_package">Loading pages…</string>
    <string name="processing_succeded">Package processing succeeded</string>
    <string name="processing_failed">Package processing failed</string>
    <string name="select_share">Select how you would like to share</string>
    <string name="update_page">Updating page…</string>
    <string name="page_error">Error refreshing page</string>


    <!-- Splash Activity -->
    <string name="copy_files">Initializing Content…</string>
    <string name="check_update">Checking for updates…</string>
    <string name="download_resources">Downloading %s resources…</string>
    <string name="update_resources">Updating %s resources…</string>

    <!-- Settings Activity -->
    <string name="settings_title">Settings</string>
    <string name="settings_main_language">Language:</string>
    <string name="settings_parallel_language">Parallel Language*:</string>
    <string name="settings_parallel_info">*Tap screen during presentation and use "Switch Language" to toggle language. Option is not shown if booklet is not available.</string>
    <string name="settings_select">Select </string>
    <string name="settings_translator_mode">Preview Mode (Translators)</string>
    <string name="settings_translator_message">If you are a GodTools translator wanting to see your latest translations, enable "Preview Mode"</string>
    <string name="settings_notification">Allow Notifications</string>
    <string name="wrong_passcode">Please try again</string>
    <string name="expired_passcode">Preview mode session expired</string>
    <string name="authenticate_code">Authenticating access code</string>

    <!-- Main Activity-->
    <string name="share">Share</string>
    <string name="share_prompt">Select how you would like to share</string>
    
    <!-- Language List -->
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>

    <!-- Translator Mode Dialog -->
    <string name="dialog_translator_mode_title">Exit Preview Mode?</string>
    <string name="dialog_translator_mode_body">Drafts will not be displayed</string>
    <string name="translator_enabled">Translator preview mode is enabled</string>
    <string name="translator_disabled">Translator preview mode is disabled</string>
    <string name="draft_published">Draft has been published</string>
    <string name="draft_publish_fail">Failed to publish draft</string>
    <string name="draft_publish_message">Do you want to publish this draft?</string>
    <string name="draft_publish_confirm">Yes, it\'s ready!</string>
    <string name="draft_publish_negative">No, I changed my mind.</string>
    <string name="draft_created">Draft has been created</string>
    <string name="draft_create_failed">Failed to create a new draft</string>
    <string name="draft_start_message">Start a draft for: </string>

    <!-- Access Code Dialog -->
    <string name="dialog_access_code_title">Enter Access Code:</string>
    <string name="invalid_code">Invalid Access Code</string>
    
    <!-- Preview Mode -->
    <string name="pull_down_info">pull to refresh drafts</string>
    <string name="preview_mode_title">Preview Mode</string>
    <string name="package_not_created">Package not yet created</string>
    <string name="refresh_no_net">Internet connection is required to refresh</string>
    <string name="connecting">Connecting with server</string>

    <!-- Package Reader -->
    <string name="open">Open</string>
    <string name="cannot_launch_browser">Cannot launch browser</string>
    <string name="multi_website_assist"> - websites to assist you</string>
    <string name="single_website_assist"> - a website to assist you</string>
    <string name="cannot_dial">Cannot launch dialler</string>
    <string name="cannot_email">Cannot launch email app</string>

    <!-- Every Student-->
    <string name="could_not_load_content">Could not load the content</string>

    <!-- Shared Strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">None</string>
    <string name="send">Send</string>
    <string name="drafts_updated">Drafts have been updated</string>
    <string name="failed_update_draft">Failed to update drafts</string>
    <string name="failed_download_draft">Failed to download drafts</string>
    <string name="failed_download_resources">Failed to download resources</string>
    <string name="success">Success!</string>
    <string name="internet_needed">An internet connection is needed to complete this request</string>
    
    <string name="alternate_language">Alternate Language</string>
    <string name="alternate_language_message">The parallel language selected is not available for this tool.</string>

    <string name="kgp_four_laws_share" formatted="false">It was great talking with you today about how we can know God personally. I hope we can talk more about this soon. In the meantime, you can check out what we looked at today at www.knowgod.com/%1/%2%3</string>

    <string name="satisfied_share" formatted="false">It was great talking with you today about how we can experience The Holy Spirit’s power in our lives. I hope we can talk more about this soon. In the meantime, you can check out what we looked at today at www.knowgod.com/%1/satisfied%3</string>

    <string name="everystudent_share"><html>It was great talking with you today about your spiritual questions. I hope we can talk more about this soon. In the meantime, you can <a href="www.knowgod.com/">check out what we looked at today</a>.</html></string>
    
    <string name="description_homescreen_icon">homescreen_icon</string>
    
    <!-- these are just filler strings used in the code, but here to be consistent -->
    <string name="filler_textview">TextView</string>
    <string name="filler_english">English</string>


</resources>
