<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
        The icons we started with are grey for showing on either a white or a black background.
      They really should use gradients and shadows etc.   	They get completely washed out on devices such as the HTC Sensation that use a white background.
        Android guidelines (http://developer.android.com/guide/practices/ui_guidelines/icon_design_menu.html) say
        we should use different designs for different devices and themes.

        A crude version of each has been created but we really need to get a designer to create all the required assets.

         -->
    <item
        android:id="@+id/CMD_SWITCH_LANGUAGE"
        android:icon="@drawable/button_switch"
        android:title="@string/menu_switch_language"/>
    <item
        android:id="@+id/CMD_REFRESH_PAGE"
        android:title="@string/menu_update_page"/>
    <item
        android:id="@+id/CMD_CONTENT"
        android:icon="@drawable/button_contents"
        android:title="@string/menu_item_contents"/>
    <item
        android:id="@+id/CMD_FLIP"
        android:icon="@drawable/button_switch"
        android:title="@string/menu_flip"/>
    <item
        android:id="@+id/CMD_FIRST_PAGE"
        android:icon="@drawable/rewind_grey"
        android:title="@string/menu_item_first_page"
        android:visible="false"/>
    <item
        android:id="@+id/CMD_EMAIL"
        android:icon="@drawable/button_export"
        android:title="@string/menu_item_email"/>
    <item
        android:id="@+id/CMD_LANGUAGES"
        android:icon="@drawable/globe_grey"
        android:title="@string/menu_item_languages"
        android:visible="false"/>
    <item
        android:id="@+id/CMD_ABOUT"
        android:icon="@drawable/button_info"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/CMD_LAST_PAGE"
        android:icon="@drawable/fast_forward_grey"
        android:title="@string/menu_item_last_page"
        android:visible="false"/>
    <item
        android:id="@+id/CMD_HELP"
        android:icon="@drawable/button_help"
        android:title="@string/menu_item_help"/>
</menu>
