<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/about_background"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:padding="15dip" android:scrollbarStyle="outsideInset">
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:isScrollContainer="true"
	    android:scrollbars="vertical">
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="horizontal">
			<ImageView
	   			android:src="@drawable/icon"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_marginRight="10dp" android:layout_gravity="top"/>
	        <LinearLayout
		    	android:layout_width="fill_parent"
		    	android:layout_height="fill_parent"
		    	android:orientation="vertical">
		        <TextView
		      		android:text="@string/app_name"
		      		android:textStyle="bold"
		      		android:textColor="@color/about_text"
		      		android:layout_width="wrap_content"
		      		android:layout_height="wrap_content" />
		      	<TextView
		      		android:id="@+id/app_version"
		      		android:textColor="@color/about_text"
		      		android:textSize="11.5sp"
		      		android:layout_width="wrap_content"
		      		android:layout_height="wrap_content" />
		      </LinearLayout>
	    </LinearLayout>
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical" android:layout_marginTop="10dp">
	   		<TextView
	      		android:textSize="12.5sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp"
                android:id="@+id/about_text"
                android:textColor="#000000"/>
	      	<TextView
	      		android:text="@string/about_copyright"
	      		android:textColor="@color/about_text"
	      		android:textSize="14.0sp"
	      		android:textStyle="bold"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="16dp" />
	      	<TextView
	      		android:text="@string/about_kgp"
	      		android:textColor="@color/about_text"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp"
	      		android:autoLink="web" />
	      	<TextView
	      		android:text="@string/about_satisfied"
	      		android:textColor="@color/about_text"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp"
	      		android:autoLink="web" />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>