<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@drawable/gt4_homescreen_background_ip4">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language"
        android:text="@string/settings_main_language"
        android:textSize="22sp"
        android:layout_marginLeft="35dp"
        android:textColor="#ffffffff"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/rlMainLanguage"
        android:layout_width="match_parent"
        android:background="#00ffffff"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/top_white_border_2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="56dp"
            android:id="@+id/left_color_block_2"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/top_white_border_2"
            android:background="@color/cru_gold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/bottom_white_border_2"
            android:layout_alignBottom="@+id/left_color_block_2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff" />

        <TextView
            android:id="@+id/tvMainLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:textColor="#ffffffff"
            android:text="@string/settings_main_language"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/left_color_block_2"
            android:paddingLeft="20dp"
            android:background="#32cdcdcd"/>

        <ImageView
            android:src="@drawable/ic_language_indicator"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:tint="#ffffffff"
            android:layout_gravity="right"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#ffffffff"
        android:text="@string/settings_parallel_language"
        android:gravity="center_vertical"
        android:layout_marginLeft="35dp"
        android:id="@+id/parallel_lang"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/rlParallelLanguage"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/top_white_border_3"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="56dp"
            android:id="@+id/left_color_block_3"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/top_white_border_3"
            android:background="@color/cru_gold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/bottom_white_border_3"
            android:layout_alignBottom="@+id/left_color_block_3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff" />

        <TextView
            android:id="@+id/tvParallelLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:textColor="#ffffffff"
            android:text="@string/none"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/left_color_block_3"
            android:layout_toEndOf="@+id/left_color_block_3"
            android:paddingLeft="20dp"
            android:background="#32cdcdcd"/>

        <ImageView
            android:src="@drawable/ic_language_indicator"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:tint="#ffffffff" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#ffffffff"
        android:text="@string/settings_parallel_info"
        android:gravity="center_vertical"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#32cdcdcd"
        android:id="@+id/notification_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/top_white_border_notice"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="56dp"
            android:id="@+id/left_color_block_notice"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/top_white_border_notice"
            android:background="@color/cru_gold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/bottom_white_border_notice"
            android:layout_alignBottom="@+id/cbNotification"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff"/>

        <android.support.v7.widget.SwitchCompat
            android:background="#00ffffff"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/settings_notification"
            android:textColor="#ffffffff"
            android:textSize="22sp"
            android:id="@+id/cbNotification"
            android:checked="true"
            android:onClick="onNotificationToggle"
            android:textOff="OFF"
            android:textOn="ON"
            android:layout_toRightOf="@+id/left_color_block_notice"
            android:layout_toEndOf="@+id/left_color_block_notice"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#32cdcdcd"
        android:id="@+id/translator_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/top_white_border"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="56dp"
            android:id="@+id/left_color_block"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/top_white_border"
            android:background="@color/cru_bright_blue"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/bottom_white_border"
            android:layout_alignBottom="@+id/left_color_block"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffffff"/>

        <android.support.v7.widget.SwitchCompat
            android:background="#00ffffff"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/settings_translator_mode"
            android:textColor="#ffffffff"
            android:textSize="22sp"
            android:id="@+id/cbTranslatorMode"
            android:checked="false"
            android:onClick="onToggleClicked"
            android:textOff="OFF"
            android:textOn="ON"
            android:layout_above="@+id/bottom_white_border"
            android:layout_toRightOf="@+id/left_color_block"
            android:layout_toEndOf="@+id/left_color_block"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"/>

</LinearLayout>